--- a/styles/_actualite.scss
+++ b/styles/_actualite.scss
@@ -1,13 +1,16 @@
 .actualite {
     margin: 100px 0;
+    color: $colorPrimaire;
 
-    h1 {
-        font-size: 3rem;
-        text-transform: uppercase;
-        margin-bottom: 50px;
+    p {
+        padding: 15px 0px;
+        font-size: 1.2rem;
+        text-indent: 15px;
+        line-height: 30px;
 
-        @media screen and (max-width: 666px) {
-            text-align: center;
+        &::first-letter {
+            font-weight: 900;
+            font-size: 2rem;
         }
     }
 
