--- a/styles/_appartement.scss
+++ b/styles/_appartement.scss
@@ -1,12 +1,6 @@
 .appart {
     margin: 100px auto 50px;
 
-    h1 {
-        font-size: 2.8rem;
-        margin: 30px auto;
-
-    }
-
     h2 {
         font-size: 2rem;
         margin: 20px auto;
@@ -15,7 +9,6 @@
     p {
         font-size: 1.2rem;
         text-indent: 20px;
-        width: 80%;
         margin: 0 0 50px;
 
         @media screen and (max-width: 1350px) {
@@ -48,7 +41,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    margin-bottom: 50px;
+    margin: 0 auto;
+    justify-content: center;
 
     img {
         height: 350px;
