--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -26,7 +26,6 @@ html {
     max-width: 1300px;
     margin: 0 auto;
 
-
     @media screen and (max-width: 1600px) {
         max-width: 1100px;
     }
@@ -68,6 +67,15 @@ li {
 a {
     text-decoration: none;
     color: inherit;
+}
+
+h1 {
+    font-size: 4.5rem;
+    margin-bottom: 50px;
+
+    @media screen and (max-width: 1450px) {
+        font-size: 5vw;
+    }
 }
 
 // MIXIN
