--- a/styles/_appartement.scss
+++ b/styles/_appartement.scss
@@ -48,5 +48,15 @@
         height: 350px;
         width: 300px;
         object-fit: cover;
+
+        @media screen and (max-width: 900px) {
+            width: 200px;
+            height: 150px;
+        }
+
+        @media screen and (max-width: 450px) {
+            width: 100px;
+            height: 80px;
+        }
     }
 }
