--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -7,7 +7,10 @@
     @media screen and (max-width: 1450px) {
         display: flex;
         flex-direction: column-reverse;
-        width: 100%;
+    }
+
+    @media screen and (max-width: 950px) {
+        margin: 0 auto 50px;
     }
 
     aside {
@@ -16,7 +19,6 @@
 
         @media screen and (max-width: 1450px) {
             margin: 0 auto;
-            width: 70%;
         }
 
         button {
@@ -57,7 +59,6 @@
 
         .actu {
             padding: 20px 10px;
-            overflow: hidden;
 
 
             h3 {
@@ -68,6 +69,10 @@
 
                 @media screen and (max-width: 1450px) {
                     font-size: 1.7rem;
+                }
+
+                @media screen and (max-width: 666px) {
+                    font-size: 1.3rem;
                 }
 
                 &:hover {
@@ -98,6 +103,10 @@
                     @media screen and (max-width: 1450px) {
                         width: 200px;
                         height: 200px;
+                    }
+
+                    @media screen and (max-width: 450px) {
+                        display: none;
                     }
                 }
 
@@ -142,6 +151,23 @@
                         width: 100%;
                     }
                 }
+
+                @media screen and (max-width: 1450px) {
+                    display: none;
+                }
+            }
+
+            .pubResp {
+                display: none;
+
+                img {
+                    width: 100%;
+                }
+
+                @media screen and (max-width: 1450px) {
+                    display: block;
+                    text-align: center;
+                }
             }
         }
 
@@ -161,8 +187,18 @@
         padding: 50px 0px;
         padding-left: 50px;
 
+        @media screen and (max-width: 1450px) {
+            padding-left: 0;
+        }
+
         h1 {
             text-align: center;
+
+            @media screen and (max-width: 650px) {
+                font-size: 3rem;
+                margin: 0 auto;
+            }
+
         }
 
         p {
@@ -173,7 +209,7 @@
             color: rgb(29 32 34);
             margin: 0 auto;
 
-            @media screen and (max-width: 1450px) {
+            @media screen and (max-width: 666px) {
                 font-size: 1rem;
             }
 
@@ -196,6 +232,9 @@
             color: $colorPrimaire;
             width: 80%;
 
+            @media screen and (max-width: 1450px) {
+                width: 100%;
+            }
         }
 
         figure {
@@ -229,16 +268,14 @@
 
             img {
                 height: 200px;
+                width: 300px;
+                object-fit: cover;
 
                 @media screen and (max-width: 750px) {
-                    width: 400px;
+                    width: 300px;
                 }
             }
 
-        }
-
-        .airbnb-embed-frame img {
-            width: 100%;
         }
 
     }
