--- a/styles/_menuBurger.scss
+++ b/styles/_menuBurger.scss
@@ -1,9 +1,3 @@
-.burgerPos {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-}
-
 .menuBurger {
     display: none;
     height: 30px;
@@ -52,8 +46,9 @@
 
 .navDeroulant {
     display: none;
+    z-index: 100;
     position: absolute;
-    top: 100px;
+    bottom: -155px;
     left: 50%;
     transform: translateX(-50%);
     width: 300px;
