--- a/styles/_reservation.scss
+++ b/styles/_reservation.scss
@@ -1,5 +1,5 @@
 .resa {
-    background: scroll no-repeat center/cover url(img/plan-montmartre.jpg);
+    background: scroll no-repeat bottom/cover url(img/plan-montmartre.jpg);
     padding: 100px;
 
     @media screen and (max-width: 750px) {
@@ -23,6 +23,11 @@
         }
 
         @media screen and (max-width: 570px) {
+            min-width: 350px;
+            width: 70%;
+        }
+
+        @media screen and (max-width: 400px) {
             min-width: 0;
             width: 90%;
         }
@@ -68,6 +73,10 @@
                 text-transform: uppercase;
                 width: 100%;
 
+                @media screen and (max-width: 570px) {
+                    font-size: 0.8rem;
+                }
+
                 input {
                     width: 100%;
                     height: 45px;
@@ -76,6 +85,11 @@
                     font-size: 1rem;
                     font-weight: bold;
                     margin: 5px 0 20px;
+
+                    @media screen and (max-width: 570px) {
+                        height: 30px;
+                        margin: 5px auto;
+                    }
                 }
             }
 
@@ -100,6 +114,11 @@
             font-weight: bold;
             font-size: 1.7rem;
             letter-spacing: 2px;
+
+            @media screen and (max-width: 570px) {
+                height: 30px;
+                font-size: 1.3rem;
+            }
 
             &:hover {
                 background-color: $colorSecondaire;
