--- a/styles/_searchBar.scss
+++ b/styles/_searchBar.scss
@@ -1,11 +1,9 @@
-.headerTop>div>div {
+.searchBar {
     display: flex;
-    width: 18vw;
-    min-width: 200px;
     position: relative;
     top: -5px;
 
-    @media screen and (max-width: 1040px) {
+    @media screen and (max-width: 1400px) {
         position: absolute;
         top: 60px;
         right: 50%;
@@ -13,11 +11,11 @@
         width: 300px;
     }
 
-    @media screen and (max-width: 570px) {
-        width: 200px;
+    @media screen and (max-width: 960px) {
+        width: 30%;
     }
 
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 800px) {
         display: none;
     }
 
