--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -26,13 +26,7 @@ html {
     max-width: 1300px;
     margin: 0 auto;
 
-    @media screen and (max-width: 1600px) {
-        max-width: 1100px;
-    }
 
-    @media screen and (max-width: 1450px) {
-        max-width: 700px;
-    }
 
     @media screen and (max-width: 666px) {
         width: 90%;
@@ -73,8 +67,16 @@ h1 {
     font-size: 4.5rem;
     margin-bottom: 50px;
 
-    @media screen and (max-width: 1450px) {
-        font-size: 5vw;
+    @media screen and (max-width: 1200px) {
+        font-size: 3.5rem;
+    }
+
+    @media screen and (max-width: 900px) {
+        font-size: 2.5rem;
+    }
+
+    @media screen and (max-width: 555px) {
+        font-size: 2rem;
     }
 }
 
